# Agentic-RAG

./: .gitignore  PLAN.md  README.md  docker-compose.yml  package.json
.cursor/: mcp.json
apps/api/: .env.example  .gitignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/app/: __init__.py  config.py  db.py  main.py  worker.py
apps/api/app/routers/: chat.py  conversations.py  deps.py  documents.py  health.py  knowledge_bases.py  settings_endpoints.py
apps/api/app/services/: app_settings.py  chat_generate.py  chunk_text.py  embeddings.py  extract_document.py  google_backoff.py  index_document.py  index_queue.py  models_const.py  retrieve.py  storage_path.py
apps/api/tests/: conftest.py  test_citations.py  test_index_queue.py  test_rag_eval_scenarios.py
apps/api/tests/integration/: test_postgres_vector.py
apps/web/: .dockerignore  .env.example  .gitignore  Dockerfile  package-lock.json  package.json
apps/web/drizzle/: 0000_init.sql  0001_embeddings_768.sql
apps/web/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
apps/web/scripts/: seed.ts
apps/web/src/: instrumentation.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: chat-app.tsx  indexing-studio-panel.tsx  settings-form.tsx
apps/web/src/db/: index.ts  schema.ts
apps/web/src/hooks/: use-knowledge-base-library.ts  use-studio-knowledge-bases.ts
apps/web/src/lib/: api-url.ts  chat-types.ts  client-openai-key.ts  constants.ts  document-status.ts  models.ts
scripts/: capture-readme-screenshots.ps1
(+10 files in other folders)
